# ScrapeX

./: .gitattributes  .gitignore  ENGINEERING.md  LICENSE  README.md  pyproject.toml  sources.yaml
apps_script/: StagingAppScript.txt
contract/: README.md  normalize-vectors.v1.json
contracts/: funnel-payload.schema.json
db/: schema.sql
design/: components.css  tokens.css
docs/: CLAUDE-after-database-separation-20260720.md  CLAUDE-before-database-separation-20260720.md  CLAUDE-before-price-history-20260720.md  COMPATIBILITY.md  DESIGN-SYSTEM.md  GENERIC_CATALOG.md  MASTER-PLAN.md  UI-SURFACES.md  db1-domain-database-isolation.md  robots-policy.md
extension/: README.md  app.css  app.html  app.js  background.js  components.css  engine.js  manifest.json  onboarding.css  onboarding.html  onboarding.js  popup.html  popup.js  tokens.css  transport.js
packaging/: build_engine.py  engine_entry.py
scrapex/: __init__.py  archive.py  autostart.py  capture.py  catalog.py  catalog_models.py  catalog_relations.py  changes.py  cli.py  compaction.py  config.py  contract.py  database_ids.py  db.py  features.py  fields.py  funnel.py  gdrive.py  ingest.py  jobs.py  localinbox.py  localsheets.py  manifest_io.py  matching.py  native.py  nativehost.py  normalize.py  osschedule.py  outputs.py  payload.py  pricehistory.py  pricekey.py  probe.py  publish.py  reports.py  retention.py  rowspec.py  scheduler.py  settings.py  storage.py  (+3 more)
tests/: test_api.py  test_api_fields.py  test_api_jobs.py  test_api_review.py  test_api_schedules.py  test_aramco.py  test_archive.py  test_autostart.py  test_catalog.py  test_catalog_api.py  test_changes.py  test_compaction.py  test_config.py  test_connector_live_defects.py  test_contract.py  test_customjson.py  (+57 more)
(+177 files in other folders)
